--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,8 @@
 body {
     margin: 0;
     overflow: hidden;
+    height: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
